Fixed coercion question typo

--- a/questions/typeCoercion/question.html
+++ b/questions/typeCoercion/question.html
@@ -5,7 +5,7 @@
 You are given three variables, `i`, `x`, and `s`.
 - `i` is *supposed* to be an integer, but it isn't.  It will be a float or a string.
 - `x` is *supposed* to be a float, but it isn't.  It will be an integer or a string.
-- `s` is *supposed* to be a string, but it isn't.  It will be an integer or a string.
+- `s` is *supposed* to be a string, but it isn't.  It will be an integer or a float.
 
 Write three lines of code that will convert these variable to their proper types.
 
